# Ready-to-use-GP_SSM

./: .gitignore  AGENTS.md  Makefile  README.md  README_CN.md  environment.yml  idea.md  pyproject.toml
.checkpoints/system_id_medium/: final.pt
configs/: default.yaml  spectral_mixture.yaml  system_id_medium.yaml
docs/: architecture.md
scripts/: train_gp_ssm.py
src/data/: timeseries.py
src/inference/: svi.py
src/models/: encoder.py  gp_ssm.py  kernels.py  observation.py  transition.py  utils.py
src/spde_gp_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spde_gp_kernel/models/: gp_ssm.py
src/training/: evaluation.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_kernels.py  test_models.py  test_new_features.py  test_svi.py  test_transition.py
